HDS-3854 fix: Tag - dismiss button overflow

--- a/packages/components/src/styles/components/form/super-select.scss
+++ b/packages/components/src/styles/components/form/super-select.scss
@@ -7,7 +7,7 @@
 
 // Copied from components/src/styles/components/tag.scss styles
 // we set a higher value than the line-height (~13px) to accommodate cases where the text wraps
-$hds-tag-border-radius: 50px; // This variable is repeated from tag.scss
+$hds-tag-border-radius: 20px; // This variable is repeated from tag.scss
 $hds-super-select-item-height: 36px;
 
 // Style overrides:
